--- a/src/styles/brands/brandLogo.module.scss
+++ b/src/styles/brands/brandLogo.module.scss
@@ -3,8 +3,10 @@
   align-items: center;
   justify-content: center;
   max-width: 140px;
+  height: 100px;
   width: 100%;
-  padding: 20px;
+  // padding: 20px;
+  padding: 5px 2px;
   background: var(--white);
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06);
@@ -20,10 +22,13 @@
 
   @media (max-width: 640px) {
     max-width: 100px;
+    max-height: 80px; // or height: 80px;
   }
 }
 
 .logoImage {
+  width: 100%;
+  height: 100%;
   filter: grayscale(100%);
   opacity: 0.7;
   transition: 0.3s ease;
