--- a/src/styles/globals/contactForm.module.scss
+++ b/src/styles/globals/contactForm.module.scss
@@ -13,6 +13,17 @@
   }
 }
 
+.errorMessage {
+  background-color: #fee;
+  color: #c33;
+  padding: 1rem;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+  font-family: var(--font-family);
+  font-weight: 500;
+  text-align: center;
+}
+
 .form {
   display: flex;
   flex-direction: column;
