--- a/src/styles/header/heading.module.scss
+++ b/src/styles/header/heading.module.scss
@@ -1,3 +1,19 @@
+.skipLink {
+  position: absolute;
+  left: -9999px;
+  z-index: 999;
+  padding: 1rem;
+  background-color: var(--accent);
+  color: var(--white);
+  text-decoration: none;
+  font-weight: bold;
+
+  &:focus {
+    left: 0;
+    top: 0;
+  }
+}
+
 .header {
   width: 100%;
   box-sizing: border-box;
@@ -63,7 +79,7 @@
               font-size: 16px;
               line-height: 150%;
               letter-spacing: -0.02em;
-              color: var(--secondary);
+              color: var(--black);
               text-decoration: none;
             }
           }
@@ -141,7 +157,7 @@
     font-size: 16px;
     line-height: 150%;
     letter-spacing: -0.02em;
-    color: var(--secondary);
+    color: var(--black);
   }
 
   .scheduleTextBox {
@@ -175,7 +191,7 @@
 @media (max-width: 1039px) {
   .headerSection {
     padding: 10px 16px !important;
-    border-bottom: 1px solid var(--secondary);
+    border-bottom: 1px solid var(--black);
     height: 68px !important;
   }
 
@@ -327,9 +343,13 @@
       }
 
       &:hover::before {
-        background-color: var(--secondary);
+        background-color: var(--black);
         width: 100%;
       }
+    }
+
+    button.navigationLinks {
+      padding-bottom: 6px;
     }
   }
 }
@@ -342,8 +362,8 @@
     width: 100%;
     max-height: 100%;
     overflow: scroll;
-    border-bottom: 1px solid var(--secondary);
-    border-top: 1px solid var(--secondary);
+    border-bottom: 1px solid var(--black);
+    border-top: 1px solid var(--black);
     box-sizing: border-box;
   }
 }
