fix(cards): fix cards, update readme

--- a/src/styles/blog/newsletterCard.module.scss
+++ b/src/styles/blog/newsletterCard.module.scss
@@ -134,6 +134,11 @@
   font-weight: 500;
 }
 
+.errorMessage {
+  color: #e74c3c;
+  background: #fee;
+}
+
 @media (max-width: 860px) {
   .newsletterCard {
     padding: 28px 20px;
