--- a/src/styles/blog/blogHeroSection.module.scss
+++ b/src/styles/blog/blogHeroSection.module.scss
@@ -100,6 +100,13 @@
   color: var(--white);
 }
 
+.blogTagsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  width: 100%;
+}
+
 .blogTag {
   border-radius: 999px;
   padding: 5px 8px;
