--- a/src/styles/blog/blogHeroSection.module.scss
+++ b/src/styles/blog/blogHeroSection.module.scss
@@ -27,10 +27,10 @@
   gap: 16px;
   box-sizing: border-box;
   padding-top: clamp(0px, calc((100vw - 1240px) * 0.7 + 50px), 50px);
+  align-items: center;
 
   @media (max-width: 860px) {
     flex-direction: column;
-    align-items: center;
   }
 }
 
@@ -58,7 +58,7 @@
   background: rgba(0, 0, 0, 0.6);
   border-radius: 20px;
   border: 1px solid #fff;
-  min-width: clamp(480px, calc(-571.06px + 111.11vw), 757px);
+  min-width: clamp(480px, calc(-571.06px + 111.11vw), 650px); //757px
   box-sizing: border-box;
 
   @media (max-width: 860px) {
@@ -135,7 +135,7 @@
   object-fit: cover;
   user-select: none;
   width: 100% !important;
-  max-height: 519px !important;
+  max-height: 400px !important; //519px
   position: relative !important;
   box-sizing: border-box !important;
   border-radius: 40px;
