--- a/src/styles/blog/blogHeroSection.module.scss
+++ b/src/styles/blog/blogHeroSection.module.scss
@@ -77,7 +77,7 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 143%;
-  color: var(--accent);
+  color: var(--accent-primary);
 }
 
 .blogTitle {
