--- a/src/styles/about-us/teamSection.module.scss
+++ b/src/styles/about-us/teamSection.module.scss
@@ -28,7 +28,7 @@
   :global(.swiper-button-prev),
   :global(.swiper-button-next) {
     transform: translateY(-50%);
-    color: var(--accent);
+    color: var(--accent-primary);
     top: 50%;
     width: 20px;
     height: 20px;
@@ -44,7 +44,7 @@
   }
 
   :global(.swiper-pagination-bullet) {
-    background: var(--accent);
+    background: var(--accent-primary);
     opacity: 0.5;
 
     &:global(.swiper-pagination-bullet-active) {
