--- a/src/styles/blog/blogListCard.module.scss
+++ b/src/styles/blog/blogListCard.module.scss
@@ -130,19 +130,21 @@
   }
 
   @media (max-width: 860px) {
-    padding: 20px !important;
+    gap: 8px;
+    padding: 18px !important;
     justify-content: center;
   }
 
   @media (max-width: 640px) {
-    padding: 16px !important;
+    gap: 4px;
+    padding: 12px !important;
   }
 }
 
 .blogMeta {
   font-family: var(--font-family);
   font-size: 0.875rem;
-  color: var(--accent);
+  color: var(--accent-primary);
 
   @media (max-width: 640px) {
     font-size: 0.8125rem;
@@ -154,7 +156,7 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 143%;
-  color: var(--accent);
+  color: var(--accent-primary);
 }
 
 .date {
@@ -162,7 +164,7 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 143%;
-  color: var(--accent);
+  color: var(--accent-primary);
 }
 
 .blogTitle,
@@ -198,6 +200,10 @@
 
   .blogListCard:hover & {
     transform: translate(4px, -4px);
+  }
+
+  @media (max-width: 860px) {
+    display: none;
   }
 }
 
