--- a/src/styles/countries/countryFacts.module.scss
+++ b/src/styles/countries/countryFacts.module.scss
@@ -2,7 +2,7 @@
   font-family: var(--font-family);
   font-size: 2.25rem;
   font-weight: 700;
-  color: var(--accent);
+  color: var(--accent-primary);
 
   @media (max-width: 860px) {
     font-size: 1.875rem;
@@ -74,7 +74,7 @@
   &.active {
     opacity: 1;
     font-weight: 600;
-    color: var(--accent);
+    color: var(--accent-primary);
 
     @media (min-width: 1241px) {
       &::before {
@@ -85,7 +85,7 @@
         transform: translateY(-50%);
         width: 4px;
         height: 24px;
-        background: var(--accent);
+        background: var(--accent-primary);
         border-radius: 2px;
       }
     }
