--- a/src/styles/header/burgerMenu.module.scss
+++ b/src/styles/header/burgerMenu.module.scss
@@ -9,11 +9,11 @@
   width: 48px;
   height: 48px;
   box-sizing: border-box;
-  background: var(--accent);
+  background: var(--accent-primary);
   transition: all 0.3s ease;
 
   div {
-    background: var(--primary);
+    background: var(--white);
     border-radius: 0.5rem;
     height: 2px;
     transition: transform 0.3s ease;
