--- a/src/styles/pool-of-candidates/candidateCard.module.scss
+++ b/src/styles/pool-of-candidates/candidateCard.module.scss
@@ -116,7 +116,7 @@
   text-decoration: none;
 
   &:hover {
-    color: var(--accent);
+    color: var(--accent-primary);
 
     svg {
       transform: translateX(4px);
