--- a/src/styles/pool-of-candidates/candidateDetails.module.scss
+++ b/src/styles/pool-of-candidates/candidateDetails.module.scss
@@ -23,7 +23,7 @@
   font-family: var(--font-family);
   font-size: 1.5rem;
   font-weight: 700;
-  color: var(--accent);
+  color: var(--accent-primary);
 
   @media (max-width: 860px) {
     font-size: 1.375rem;
@@ -124,7 +124,7 @@
     content: '•';
     position: absolute;
     left: 0;
-    color: var(--accent);
+    color: var(--accent-primary);
     font-weight: 700;
   }
 
