--- a/src/styles/globals/heroSection.module.scss
+++ b/src/styles/globals/heroSection.module.scss
@@ -59,6 +59,7 @@
         font-weight: 400;
         font-size: 16px;
         color: var(--black);
+        white-space: pre-line;
       }
 
       .heroSectionContentDetails {
